fix: bug html2canvas shifting text downwards

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,3 +68,9 @@ body {
   padding: 0;
   border: none;
 }
+
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
